# Germany-Cologne

./: 2016-03-Move-Semantic-by-Nicolai-M-Josuttis.md  2019-07-Expiring-TODOs-by-Daniel-Frey.md  2019-07-Live-coding-asio-by-Simon-Graetzer.md  2020-05-libgcc-when-exceptions-collide.md  2025-04-29 Meeting C++ User Group.md  README.md
Arzt_Bilderverarbeitung-OpenCV/: LICENSE  README.md
Arzt_Bilderverarbeitung-OpenCV/ppt/: Bildverarbeitung-OpenCV.pptx
Arzt_Bilderverarbeitung-OpenCV/src/: CMakeLists.txt  bluebox.cpp  brighten.cpp  channels.cpp  colormodel.cpp  histograms.cpp  readimg.cpp  sobel.cpp  video.cpp  video_diff.cpp  video_sobel.cpp
Oberhoff_Boost_Gil/: heightlines.cpp
Wendt_Wielpuetz_Shared_Pointers/: main.cpp
